# vc-python

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-05-20-sdk-api-alignment.md
docs/superpowers/specs/: 2026-03-17-vynco-python-sdk-design.md  2026-03-18-sdk-v1-update-design.md  2026-05-20-sdk-api-alignment-design.md
examples/: README.md  _common.py  bulk_export.py  company_network.py  due_diligence.py  historical_timeline.py  predictive_risk.py  quickstart.py  ubo_resolution.py  watchlist_monitor.py
exports/: companies-export.csv
notebooks/: README.md  company_deep_dive.ipynb  compliance_screening.ipynb  industry_intelligence.ipynb  market_flows.ipynb  similar_companies.ipynb  swiss_market_analytics.ipynb
scripts/: api_gap.py
src/vynco/: __init__.py  _base_client.py  _client.py  _constants.py  _errors.py  _response.py
src/vynco/resources/: ai.py  alerts.py  analytics.py  api_keys.py  audit.py  auditors.py  billing.py  bulk.py  changes.py  companies.py  compliance.py  credits.py  dashboard.py  dossiers.py  exports.py  graph.py  health.py  notifications.py  ownership.py  persons.py  pipelines.py  reports.py  risk.py  saved_searches.py  screening.py  settings.py  sync.py  teams.py  usage.py  users.py  watches.py  watchlists.py  webhooks.py
src/vynco/types/: __init__.py  ai.py  alerts.py  analytics.py  api_keys.py  audit.py  auditors.py  billing.py  bulk.py  changes.py  (+33 more)
tests/: conftest.py  test_client.py  test_companies.py  test_resources.py
tests/live/: conftest.py  test_smoke.py
